# cookiecutter-python-template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  tasks.py
.github/workflows/: python-test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py
{{cookiecutter.project_folder}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
{{cookiecutter.project_folder}}/.github/workflows/: python-test.yml
{{cookiecutter.project_folder}}/tests/: __init__.py
{{cookiecutter.project_folder}}/{{cookiecutter.module_name}}/: __init__.py  __main__.py
