[tool.poetry]
name =  "{{ cookiecutter.namespace + '-' + cookiecutter.module_name if cookiecutter.namespace else cookiecutter.module_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{include =  "{{ cookiecutter.module_name }}" from = "{{ cookiecutter.namespace }}"}]

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version }}, <3.13"
{%- if cookiecutter.use_jupyterlab == "y" %}
jupyterlab = "^3.0.0"
{%- endif %}
pydantic = "^1.10.7"
fastapi = "^0.112.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^0.991"
bandit = "^1.7.4"
pre-commit = "^3.0.4"
toml = "^0.10.2"
types-toml = "^0.10.1"
typing_extensions = "^4.4.0"
pymdown-extensions = "^9.9.2"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-cookies = "^0.6.1"
pytest-mock = "^3.3.1"
pytest-xdist = "^2.1.0"
mdformat = "^0.7.16"
invoke = "^2.2.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = 'tests/*.py'

# public pypi packgaes.
[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "adi-pypi"
url = "https://artifactory.analog.com/artifactory/api/pypi/adi-pypi-local/simple/"
priority = "explicit"
